/*
 * Copyright (C) 2017-2018 Dremio Corporation
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */
package com.dremio.dac.proto.support;

import "support.proto";

option java_package = "com.dremio.dac.proto.model.source";
option optimize_for = SPEED;

enum UpgradeStatus {
   UNKNOWN = 1;
   RUNNING = 2; // not used for now
   COMPLETED = 3;
   FAILED = 4;
   OUTDATED = 5;
}

message UpgradeTaskId {
  optional string id = 1; // uniqueID string generated per Task
}

message UpgradeTaskStore {
  optional UpgradeTaskId id = 1; // id of the task
  optional string name = 2;
  optional uint64 version = 3 [deprecated = true];
  repeated UpgradeTaskRun runs = 4;
  optional string tag = 5;
  // is_repeatable - false if not allowed to repeat, true otherwise
  // not used now
  //optional bool is_repeatable = ; [default = false]
}

message  UpgradeTaskRun {
  optional UpgradeStatus status = 1; // completed, failed, etc.
  optional uint64 start_time = 2;
  optional uint64 end_time = 3;
  // following not used, may need later
  // optional ClusterVersion from_version = ;
  // optional ClusterVersion to_version = ;
}

