/*
 * Copyright (C) 2017-2019 Dremio Corporation
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */
package com.dremio.datastore;

option java_package = "com.dremio.datastore";
option optimize_for = SPEED;

message KVFormatInfo {
  enum Type {
    BYTES = 1;
    UUID = 2;
    STRING = 3;
    PROTOBUF = 4;
    PROTOSTUFF = 5;
    COMPOUND = 6;
  }

  required Type type = 1;
  optional string classNameParam = 2;
  repeated KVFormatInfo compoundFields = 3;
}

message KVStoreInfo {
  required string tablename = 1;
  required KVFormatInfo keyFormat = 2;
  required KVFormatInfo valueFormat = 3;
  optional string documentConverterClassName = 4 [deprecated=true];
  optional string versionExtractorClassName = 5;
}

message StoreMetadata {
  optional string table_name = 1;
  optional int64 latest_transaction_number = 2 [default = 0];
}
